fixed spacing of service card elements

--- a/css/services.less
+++ b/css/services.less
@@ -99,10 +99,13 @@
         .cs-h3 {
             /* 20px - 25px */
             font-size: clamp(1.25rem, 2.5vw, 1.5625rem);
-            line-height: 1.2em;
             font-weight: bold;
             margin: 0 0 (12/16rem) 0;
             color: var(--headerColor);
+            min-height: 2.5em;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .cs-item-text {
